<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item1"
        android:title="@string/item1"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/item2"
        android:title="@string/item2"
        android:icon="@drawable/plus"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item3"
        android:title="@string/item3"
        android:icon="@drawable/search"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item4"
        android:title="@string/item4"
        android:icon="@drawable/help"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

</menu>